--- a/src/styles/mixins/_screen.scss
+++ b/src/styles/mixins/_screen.scss
@@ -9,23 +9,19 @@ $monitor: 2560px;
     @media (min-width: $mobile) {
       @content;
     }
-  }
-  @else if $size == $tablet {
+  } @else if $size == $tablet {
     @media (min-width: $tablet) {
       @content;
     }
-  }
-  @else if $size == $laptop {
+  } @else if $size == $laptop {
     @media (min-width: $laptop) {
       @content;
     }
-  }
-  @else if $size == $desktop {
+  } @else if $size == $desktop {
     @media (min-width: $desktop) {
       @content;
     }
-  }
-  @else if $size == $monitor {
+  } @else if $size == $monitor {
     @media (min-width: $monitor) {
       @content;
     }
